# terraform-cloud-custodian-lambda

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.tf  outputs.tf  pyproject.toml  test.env  variables.tf
docs/: MULTIPLE_REGIONS.md  TROUBLESHOOTING.md
examples/: README.md
examples/cloudtrail/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
examples/config-rule/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
examples/ec2-instance-state/: README.md  main.tf  outputs.tf  variables.tf
examples/mailer/: README.md  main.tf  outputs.tf  variable.tf
examples/multi-policies/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
examples/multi-region/: README.md  main.tf  outputs.tf  variables.tf
examples/periodic/: README.md  main.tf  outputs.tf  tfplan  variables.tf
examples/schedule/: main.tf  outputs.tf  variables.tf
modules/cloud-custodian-lambda-mailer/: README.md  main.tf  outputs.tf  variables.tf
modules/cloud-custodian-lambda-policies/: README.md  main.tf  outputs.tf  variables.tf
ops/: README.md  common.py  get_cloudwatch_event_pattern.py  get_config_rule_params.py  package_lambda_mailer.py  package_lambda_policy.py  validate_lambda_mailer.py  validate_lambda_policy.py
tests/: README.md
tests/ops/: fixtures.py  test_common.py  test_get_cloudwatch_event_pattern.py  test_get_config_rule_params.py  test_package_lambda_mailer.py  test_package_lambda_policy.py  test_validate_lambda_mailer.py  test_validate_lambda_policy.py
tests/terraform/: cloudtrail_test.go  config_rule_test.go  (+10 more)
(+8 files in other folders)
