[project]
name = "terraform-cloud-custodian-lambda"
version = "1.0.0"
description = "Terraform module for Cloud Custodian Lambda deployment"
authors = [
    { name = "terraform-cloud-custodian-lambda" }
]
license = "MIT"
readme = "README.md"
requires-python = "<4.0.0,>=3.10.2"
dependencies = [
    "c7n==0.9.48",
    "c7n-mailer==0.6.47",
    "decorator==5.2.1",
    "setuptools>=65.0.0",
]

[project.urls]
repository = "https://github.com/elsevierlabs-os/terraform-cloud-custodian-lambda"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-html>=3.1.0",
    "bandit>=1.7.0",
]
lint = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ops"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.pytest.ini_options]
addopts = "--tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "functional: Functional tests that may provision real resources",
]
python_files = ["test_*.py"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:UserWarning"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"